--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@authrim/web",
+  "packageManager": "pnpm@9.15.0",
   "version": "0.1.9",
   "description": "Browser implementation for Authrim SDK",
   "type": "module",
